fix viewport settings, make menu smoothly collapse

--- a/src/css/partials/navigation.scss
+++ b/src/css/partials/navigation.scss
@@ -4,40 +4,32 @@
   background-color: $red;
 }
 
+#collapsible {
+  @include media("<=phone") {
+    max-height: 0;
+    transition: max-height $tr-speed $tr-mode;
+    overflow: hidden;
+
+    &.expanded {
+      max-height: 500px;
+      transition: max-height $tr-speed $tr-mode;
+    }
+  }
+}
+
 .menu {
   list-style: none;
   padding: 0 1em;
   clear: right;
-
-  @include media(">phone") {
-    display: block;
-  }
+  display: block;
 
   li {
     display: inline-block;
     padding: 0;
     margin: 0;
-  }
 
-  @include media("<=phone") {
-    ul {
-      height: 0;
-      transition: $tr-scope $tr-speed $tr-mode;
-    }
-
-    li {
-      display: none;
-    }
-
-    &.expanded {
-      ul {
-        height: auto;
-        transition: $tr-scope $tr-speed $tr-mode;
-      }
-
-      li {
-        display: block;
-      }
+    @include media("<=phone") {
+      display: block;
     }
   }
 
