--- a/src/css/partials/settings.scss
+++ b/src/css/partials/settings.scss
@@ -10,6 +10,7 @@ $gold: #bf931a;
 
 // transitions
 $tr-speed: 350ms;
+$tr-mode-slow: 0.6s;
 $tr-scope: all;
 $tr-mode: cubic-bezier(0.4, 0.0, 0.2, 1);
 
